<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/backgroundphoto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OTP">


    <TextView
        android:id="@+id/textVieww"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="43dp"
        android:layout_marginLeft="38dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="31dp"
        android:text="@string/enter_phone_no"
        android:textColor="@color/colorAccent"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextt2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editTextt2"
        android:layout_width="311dp"
        android:layout_height="59dp"
        android:layout_marginBottom="34dp"
        android:layout_marginEnd="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginStart="38dp"
        android:drawableStart="@drawable/ic_action_phone"
        android:hint="@string/phone_no"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textVieww"
        android:drawableLeft="@drawable/ic_action_phone" />

    <Button
        android:id="@+id/button3"
        android:layout_width="214dp"
        android:layout_height="59dp"
        android:layout_marginBottom="53dp"
        android:background="@drawable/button_style"
        android:text="@string/send_otp"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editTexttt3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextt2" />


    <EditText
        android:id="@+id/editTexttt3"
        android:layout_width="309dp"
        android:layout_height="51dp"
        android:layout_marginBottom="49dp"
        android:layout_marginEnd="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginStart="38dp"
        android:hint="@string/enter_otp"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button4"
        android:layout_width="218dp"
        android:layout_height="64dp"
        android:layout_marginBottom="85dp"
        android:background="@drawable/button_style"
        android:text="@string/verify"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTexttt3" />



</android.support.constraint.ConstraintLayout>