<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/backgroundphoto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"  >


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="142dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/app_logo"
        app:layout_constraintBottom_toTopOf="@+id/edittext1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/edittext1"
        android:layout_width="305dp"
        android:layout_height="59dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginStart="48dp"
        android:drawableStart="@drawable/ic_action_phone"
        android:hint="@string/phone_no"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/edittext2"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:drawableLeft="@drawable/ic_action_phone" />

    <EditText
        android:id="@+id/edittext2"
        android:layout_width="307dp"
        android:layout_height="64dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginRight="46dp"
        android:layout_marginStart="46dp"
        android:drawableStart="@drawable/ic_action_pass"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext1"
        android:drawableLeft="@drawable/ic_action_pass" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/forgot_password"
        android:textColor="#ff0000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext2" />

    <Button
        android:id="@+id/buttonlogin"
        android:layout_width="245dp"
        android:layout_height="64dp"
        android:layout_marginBottom="26dp"
        android:layout_marginEnd="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginStart="70dp"
        android:background="@drawable/button_style"
        android:onClick="logi"
        android:text="@string/login"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/register_here"
        android:textColor="#ffffff"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonlogin" />





</android.support.constraint.ConstraintLayout>