<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundphoto"
    tools:context=".search">

    <Button
        android:id="@+id/button"
        android:layout_width="219dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/button_style"
        android:onClick="searchmethod"
        android:text="@string/search"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.09" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="295dp"
        android:layout_height="57dp"
        android:layout_marginEnd="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginRight="58dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="52dp"
        android:drawableStart="@drawable/ic_action_phone"
        android:ems="10"
        android:hint="@string/phone_no"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        android:drawableLeft="@drawable/ic_action_phone" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="51dp"
        android:text="@string/edit_profile"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="250dp"
        android:layout_height="140dp"
        android:layout_marginBottom="349dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:src="@drawable/search_image"
        android:contentDescription="@string/todo" />


</android.support.constraint.ConstraintLayout>