<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/backgroundphoto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <TextView
        android:id="@+id/textView114"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="43dp"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="28dp"
        android:text="@string/enter_your_details"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText115"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:layout_marginEnd="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginStart="33dp"
        android:drawableStart="@drawable/ic_action_pencil1"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/editText137"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView114"
        android:drawableLeft="@drawable/ic_action_pencil1" />

    <EditText
        android:id="@+id/editText137"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:layout_marginEnd="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginStart="34dp"
        android:drawableStart="@drawable/ic_action_email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/textView1741"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText115"
        android:drawableLeft="@drawable/ic_action_email" />

    <TextView
        android:id="@+id/textView1741"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="31dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="15dp"
        android:text="@string/age"
        android:textColor="#ffffff"
        android:textSize="27sp"
        app:layout_constraintBottom_toTopOf="@+id/radioButton2"
        app:layout_constraintEnd_toStartOf="@+id/editText42"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText137" />

    <EditText
        android:id="@+id/editText42"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:textColorHint="#ffffff"
        android:inputType="phone"
        android:textColor="#ffffff"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView1741"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView1741" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="28dp"
        android:checked="false"
        android:text="@string/male"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:onClick="onRadioButtonClicked"
        app:layout_constraintBottom_toTopOf="@+id/editText1186"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/radioButton"
        app:layout_constraintTop_toBottomOf="@+id/textView1741"
        tools:ignore="NotSibling" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:checked="false"
        android:text="@string/female"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:onClick="onRadioButtonClicked"
        app:layout_constraintBottom_toTopOf="@+id/editText1186"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.711"
        app:layout_constraintStart_toEndOf="@+id/radioButton"
        app:layout_constraintTop_toBottomOf="@+id/textView1741" />

    <EditText
        android:id="@+id/editText1186"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="47dp"
        android:layout_marginEnd="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginStart="35dp"
        android:drawableStart="@drawable/ic_action_pass"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/button25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton2"
        android:drawableLeft="@drawable/ic_action_pass" />

    <Button
        android:id="@+id/button25"
        android:layout_width="231dp"
        android:layout_height="58dp"
        android:layout_marginBottom="43dp"
        android:background="@drawable/button_style"
        android:text="@string/save"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        android:onClick="registerheremethod123"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText1186"
        android:focusable="true" />





</android.support.constraint.ConstraintLayout>